# dicom-image-reader

./: CMakeLists.txt  README.md  main.cpp  proof_of_concept.py
